* fixed bug in item deletion page update * fixed some layout problems of list rendering

--- a/Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
+++ b/Research/KnowWE-Plugin-WissKont/src/main/resources/webapp/KnowWEExtension/css/wisskont.css
@@ -1,3 +1,16 @@
+.clearfix:before,
+.clearfix:after {
+content: " ";
+//display: table;
+}
+.clearfix:after {
+clear: both;
+}
+.clearfix {
+*zoom: 1;
+}
+
+
 .applicationlogo a:hover {
 	background-position: 30px 20px;
 }
@@ -63,22 +76,35 @@
 	}
 	
 .deletableListElement:hover {
+	background-color: #CCCCCC;
 	display: inline;
-	border: 1px dotted gray;
-    border-radius: 4px 4px 4px 4px;
+	border: 1px dotted black;
+    border-radius: 8px 8px 8px 8px;
     bottom: -1px;
     left: -1px;
     padding-right: 1px;
-    padding-left: 1px;
+    padding-left: 4px;
     right: -15px;
     text-align: right;
     top: -1px;	
 }
 
-
 .deletableListElement {
-	display: inline;
-
+    background-color: #F6F6F6;
+    border: 1px dotted #CCCCCC;
+    border-radius: 8px 8px 8px 8px;
+    bottom: -1px;
+    display: inline;
+    left: -1px;
+    padding-left: 4px;
+    padding-right: 1px;
+    right: -15px;
+    text-align: right;
+    top: -1px;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-bottom: 1px;
+    margin-top: 1px;
 }
 
 
